Gnome Shell stops responding when dragging a window on its titlebar with a touchscreen
Affected version
OS: Arch Linux
Mutter version: 44.1-72-g4a5a31ed (commit 4a5a31ed)
Server: Wayland
Device: Dell Latitude 5285
Bug summary
The issue described at #2630 (closed) still persists. On Gnome Shell 44.1 along with Mutter's main branch the shell seems to "crash" when trying to drag a window on a touchscreen (although the clock in the shell keeps running and when connecting a mouse it shows and moves, you just can't interact with anything).
The logs show the following error:
clutter_seat_query_state: assertion 'CLUTTER_IS_INPUT_DEVICE (device)' failed
I'm not sure if this should be an issue here or in Gnome Shell, but since I found that existing issue and saw some comments about the potential issue in Mutter's code, I opened it here. I also decided to open a new issue since the previous one has been closed for some months and wasn't sure that a comment there would have drawn any attention.
Steps to reproduce
- Install Gnome 44.1 on a device with a touchscreen
- Try to drag a window using the touchscreen
- The shell stops responding
What happened
Gnome Shell stopped responding to any interaction. The clock in the status bar kept running, and when connecting a mouse it shows and moves as expected, but still can't interact with the shell.
What did you expect to happen
Not cause Gnome Shell to crash